--- a/strivestaurant/package.json
+++ b/strivestaurant/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "bootstrap": "^4.6.0",
+    "date-fns": "^2.28.0",
     "fs": "^0.0.1-security",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
